--- a/chaz.html
+++ b/chaz.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    This is great to hear from you
-</body>
+    <h1>Hi everyone, Welcome to my Website</h1>
+    This is great to hear from you </body>
 
 </html>
