--- a/chaz.html
+++ b/chaz.html
@@ -7,7 +7,8 @@
 
 <body>
     <h1>Hi everyone, Welcome to my Website</h1>
-    <h3>Greetings from Uganda<h3>
-    This is great to hear from you </body>
+    <h3>Greetings from Uganda</h3>
+    This is great to hear from you
+</body>
 
 </html>
