moved style to head

--- a/chaz.html
+++ b/chaz.html
@@ -3,12 +3,20 @@
 
 <head>
     <title>Hello Everyone!</title>
+    <style>
+        h3 {
+            background-color: aquamarine;
+            text-shadow: chartreuse;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Hi everyone, Welcome to my Website</h1>
-    <h3 style="color:aqua">Greetings from Uganda !!</h3>
+    <h3>Greetings from Uganda !!</h3>
     This is great to hear from you
 </body>
+
+</html>
 
 </html>
