--- a/chaz.html
+++ b/chaz.html
@@ -3,19 +3,31 @@
 
 <head>
     <title>Hello Everyone!</title>
-    <style>
-        h3 {
-            background-color: aquamarine;
-            text-shadow: chartreuse;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>Hi everyone, Welcome to my Website</h1>
-    <h3>Greetings from Uganda!</h3>
-    This is great to hear from you
+    <div class="nav-bar">
+        <ul>
+            <li>Home</li>
+            <li>contact</li>
+            <li>Gender</li>
+            <li>open_source</li>
+        </ul>
+    </div>
+    <div>
+        <h1>Hi everyone, Welcome to my Website</h1>
+        <h3>Greetings from Uganda!</h3>
+        This is great to hear from you
+    </div>
+    <div>
+        <input type="text" name="first_name">
+        <input type="text" name="last_name">
+        <input type="text" name="Email">
+        <input type="submit" name="submit">
+    </div>
 </body>
+
+</html>
 
 </html>
 
